--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -11,9 +11,9 @@
 	</style>
 	<body>
 		<h1>Hello. Welcome to Chris Tarazi's Personal Home Page</h1>
-		<a href="/static/resume.pdf"> Click here for my résumé. </a>
+		<a href="/ctarazi/static/resume.pdf"> Click here for my résumé. </a>
 		<br>
-		<a href="/fortune"> Click here for a fortune. </a>
+		<a href="/ctarazi/fortune"> Click here for a fortune. </a>
 	</body>
 </html>
 
