Update static link and fortune application link

--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -55,10 +55,10 @@
 			<br>
 
 			<div class="links">
-				<a href="/static/resume.pdf"> Résumé </a>
+				<a href="/ctarazi/static/resume.pdf"> Résumé </a>
 				<a href="https://github.com/christarazi"> GitHub </a>
 				<a href="http://stackoverflow.com/users/2193236/chris-tarazi"> Stack Overflow </a>
-				<a href="/fortune"> Get a fortune </a>
+				<a href="/ctarazi/fortune"> Get a fortune </a>
 			</div>
 		</div>
 
