--- a/TaraziChrisSite/fortune/templates/fortune/index.html
+++ b/TaraziChrisSite/fortune/templates/fortune/index.html
@@ -48,7 +48,7 @@
 			margin: auto auto 1em auto;
 		}
 		a:link {
-			text-align: left;
+			text-align: center;
 			vertical-align: left;
 			color: #5DBCD2;
 			padding: 5px;
