Change vertical-align to middle

--- a/TaraziChrisSite/fortune/templates/fortune/index.html
+++ b/TaraziChrisSite/fortune/templates/fortune/index.html
@@ -49,7 +49,7 @@
 		}
 		a:link {
 			text-align: center;
-			vertical-align: left;
+			vertical-align: middle;
 			color: #5DBCD2;
 			padding: 5px;
 			text-decoration: none;
