--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -31,8 +31,6 @@
 		    margin: 0;
 		    padding: 0;
 		    overflow: hidden;
-		    opacity: 0;
-			transition: opacity 2s linear;
 		}
 		ul.main-list li {
 			display: inline;
@@ -44,6 +42,12 @@
 			height: 200px;
 			width: auto;
 			border-radius: 50%;
+			opacity: 0;
+			transition: opacity 2s linear;
+		}
+		#myName {
+			opacity: 0;
+			transition: opacity 2s linear;
 		}
 		ul.info-list {
 			margin: auto;
@@ -69,7 +73,15 @@
 			color: black;
 		}
 	</style>
-	<body onload="document.getElementsByClassName('main-list')[0].setAttribute('style', 'opacity:1;');">
+	<script type="text/javascript">
+		function activateFade()
+		{
+			document.getElementById('imgPicture').setAttribute('style', 'opacity:1;');
+			// add all elements in here to change their opacity attribute
+			// add transition-delay to the element's css 
+		}
+	</script>
+	<body onload="activateFade();">
 		<div class="main">
 			<ul class="main-list">
 				<li id="picture">
@@ -87,9 +99,6 @@
 			<li id="fortune"><a href="/ctarazi/fortune"> Get a fortune </a></li>
 		</ul>
 		</div>
-		<script type="text/javascript">
-			
-		</script>
 	</body>
 </html>
 
