--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<title>Christopher Tarazi</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
 	</head>
 	<style type="text/css">
+		* {
+			font-family: 'Roboto', sans-serif;
+		}
 		html {
 			width: 100%;
 			background-color: #E6E6E6;
 		}
 		div.main {
 			margin: auto;
-			width: 75%;
+			width: 50%;
 			color: #494749;
 			border-style: solid;
 			background-color: white; 
@@ -21,6 +25,8 @@
 			box-shadow: 0 0 2px #333333;
 			overflow: auto;
 			text-align: center;
+			opacity: 0;
+			transition: opacity 2s ease-in .5s;
 		}
 		li h3 {
 			margin: -20px 0px 20px 0px;
@@ -34,7 +40,6 @@
 		}
 		ul.main-list li {
 			display: inline;
-			vertical-align: middle;
 		}
 		ul.main-list li img {
 			display: block;
@@ -42,41 +47,59 @@
 			height: 200px;
 			width: auto;
 			border-radius: 50%;
-			opacity: 0;
-			transition: opacity 2s linear;
+			/*opacity: 0;
+			transition: opacity 2s linear 2s;*/
 		}
-		#myName {
-			opacity: 0;
-			transition: opacity 2s linear;
-		}
-		ul.info-list {
-			margin: auto;
+		ul.info-list, ul.tech-list {
+			margin: 0;
 			display: block;
-			width: 50%;
 			list-style-type: none;
-			background: #5DBCD2;
+			padding: 0;
+			text-decoration: none;
+			/*background: #5DBCD2;
 			border-top-left-radius: .5em;
 			border-bottom-left-radius: .5em;
 			border-top-right-radius: .5em;
 			border-bottom-right-radius: .5em;
-			padding: 1em;
+			padding: 1em;*/
 		}
-		ul.info-list li {
-			display: inline;
+		ul.info-list li, ul.tech-list li {
+			display: inline-block;
 		}
-		ul.info-list li a {
-			text-decoration: none;
-			color: white;
-			padding: 1em;
+		ul.info-list li a, ul.tech-list li a {
+		    position: relative;
+		    padding: 10px 40px;
+		    margin: 0px 10px 10px 0px;
+		    float: left;
+		    border-radius: 8px;
+		    font-size: 20px;
+		    color: #FFF;
+		    text-decoration: none;  
+		    background-color: #3498DB;
+		    border-bottom: 5px solid #2980B9;
+		    text-shadow: 0px -1px #2980B9;
+		    /* Animation */
+		    transition: all 0.1s;
+		    -webkit-transition: all 0.1s;
 		}
-		ul.info-list li a:hover {
-			color: black;
+		ul.info-list li a:hover, ul.info-list li a:focus,
+		ul.tech-list li a:hover, ul.tech-list li a:focus
+		{
+		    text-decoration: none;
+		    color: #fff;
+		}
+		ul.info-list li a:active, ul.tech-list li a:active {
+		    transform: translate(0px,-1px);
+		    border-bottom: 1px solid;
 		}
 	</style>
 	<script type="text/javascript">
 		function activateFade()
 		{
-			document.getElementById('imgPicture').setAttribute('style', 'opacity:1;');
+			document.getElementsByClassName('main')[0].setAttribute('style', 'opacity:1;');
+			//document.getElementById('imgPicture').setAttribute('style', 'opacity:1;');
+			//document.getElementsByClassName('info-list')[0].setAttribute('style', 'opacity:1;');
+			//document.getElementsByClassName('tech-list')[0].setAttribute('style', 'opacity:1;');
 			// add all elements in here to change their opacity attribute
 			// add transition-delay to the element's css 
 		}
@@ -93,11 +116,18 @@
 		<br>
 		<h2 id="headCntInfo">Contact Information</h2>
 		<ul class="info-list">
-			<li id="resume"><a href="/ctarazi/static/resume.pdf"> Résumé </a></li>
-			<li id="github"><a href="https://github.com/christarazi"> GitHub </a></li>
-			<li id="stackoverlfow"><a href="http://stackoverflow.com/users/2193236/chris-tarazi"> Stack Overflow </a></li>
-			<li id="fortune"><a href="/ctarazi/fortune"> Get a fortune </a></li>
+			<li id="resume"><a href="/ctarazi/static/resume.pdf">Résumé</a></li>
+			<li id="resume"><a href="https://www.linkedin.com/in/christarazi">LinkedIn</a></li>
+			<li id="email"><a href="mailto:christaraz.@yahoo.com">Email Me</a></li>
 		</ul>
+		<br>
+		<h2 id="techInfo">Personal Projects</h2>
+		<ul class="tech-list">
+			<li id="github"><a href="https://github.com/christarazi">GitHub</a></li>
+			<li id="stackoverflow"><a href="http://stackoverflow.com/users/2193236/chris-tarazi">Stack Overflow</a></li>
+			<li id="fortune"><a href="/ctarazi/fortune">Get a fortune</a></li>
+		</ul>
+
 		</div>
 	</body>
 </html>
