--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-		<link href='stylesheet.css' rel='stylesheet' type='text/css'>
+		<link href='/static/stylesheet.css' rel='stylesheet' type='text/css'>
 		<title>Christopher Tarazi</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
 	</head>
@@ -29,7 +29,7 @@
 		<h2 id="headCntInfo">Contact Information</h2>
 		<ul class="info-list">
 			<li id="resume"><a href="/ctarazi/static/resume.pdf">Résumé</a></li>
-			<li id="resume"><a href="https://www.linkedin.com/in/christarazi">LinkedIn</a></li>
+			<li id="lnikedin"><a href="https://www.linkedin.com/in/christarazi">LinkedIn</a></li>
 			<li id="email"><a href="mailto:christaraz.@yahoo.com">Email Me</a></li>
 		</ul>
 		<br>
