Fixed stylesheet loading

--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-		<link href='/static/stylesheet.css' rel='stylesheet' type='text/css'>
+		<link href='/ctarazi/static/stylesheet.css' rel='stylesheet' type='text/css'>
 		<title>Christopher Tarazi</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
 	</head>
