Fix email; turn off debugging

--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -30,7 +30,7 @@
 		<ul class="info-list">
 			<li id="resume"><a href="/ctarazi/static/resume.pdf">Résumé</a></li>
 			<li id="lnikedin"><a href="https://www.linkedin.com/in/christarazi">LinkedIn</a></li>
-			<li id="email"><a href="mailto:christaraz.@yahoo.com">Email Me</a></li>
+			<li id="email"><a href="mailto:christarazi.@yahoo.com">Email Me</a></li>
 		</ul>
 		<br>
 		<h2 id="techInfo">Personal Projects</h2>
