Added fixed width for better viewing

--- a/TaraziChrisSite/TaraziChrisSite/templates/home.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/home.html
@@ -4,7 +4,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link href='/ctarazi/static/stylesheet.css' rel='stylesheet' type='text/css'>
 		<title>Christopher Tarazi</title>
-		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
+		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8; 705" />
 	</head>
 	<script type="text/javascript">
 		function activateFade()
