--- a/TaraziChrisSite/TaraziChrisSite/static/stylesheet.css
+++ b/TaraziChrisSite/TaraziChrisSite/static/stylesheet.css
@@ -7,7 +7,8 @@
 		}
 		div.main {
 			margin: auto;
-			width: 35%;
+			min-width: 728px;
+			max-width: 728px;
 			color: #494749;
 			border-style: solid;
 			background-color: white; 
