--- a/TaraziChrisSite/fortune/templates/fortune/index.html
+++ b/TaraziChrisSite/fortune/templates/fortune/index.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<title>Fortunes</title>
-		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
+		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<!--<link href='/home/chris/Documents/CS223/Assignment8/Part2/personalsite/TaraziChrisSite/TaraziChrisSite/static/stylesheet.css' rel='stylesheet' type='text/css'> !-->
+		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8; 705" />
 	</head>
 	<style type="text/css">
 		{% include "fortune/base.css" %}
@@ -46,6 +49,8 @@
 	                        	<a title="Stackoverflow" class="social-links" href="http://stackoverflow.com/users/2193236/chris-tarazi"><i class="fa fa-stack-overflow fa-lg"></i></a>
 	                        </li>
 	                    </ul>
+	                    <br>
+	                    <hr>
 	                </aside>
 	            </div>
 	            <div id="fortune">
