--- a/TaraziChrisSite/TaraziChrisSite/templates/base.css
+++ b/TaraziChrisSite/TaraziChrisSite/templates/base.css
@@ -134,11 +134,11 @@
 		}
 		#links a {
 			position: relative;
-		    padding: 7.5px 30px;
-		    margin: 0px 10px 10px 0px;
+		    padding: 1em;
+		    margin: auto;
 		    float: left;
 		    border-radius: 4px;
-		    font-size: 18px;
+		    font-size: 1.5em;
 		    color: white;
 		    text-decoration: none;
 		    background-color: #55acee;
