--- a/TaraziChrisSite/TaraziChrisSite/templates/media_queries.css
+++ b/TaraziChrisSite/TaraziChrisSite/templates/media_queries.css
@@ -1,51 +1,54 @@
-/* Large desktop */
-
-@media (min-width: 1350px) and (max-width: 1699px) {
+/* Tablets to small laptops */
+@media (min-width: 1100px) and (max-width: 1699px) {
 	#baseContainer {
 		max-width: 90%;
-	}
-	header {
-		padding-top: 15px;
-	}
-	#primarySidebar {
-		width: 15%;
-	}
-	#allPosts {
-		width: 81%;
-	}
-	#sidebarList li img {
-		height: 165px;
-	}
-}
-/* Medium desktop */
-
-@media (min-width: 1100px) and (max-width: 1349px) {
-	#baseContainer {
-		max-width: 90%;
+		font-size: 1.5vmax;
 	}
 	header {
 		padding-top: 0px;
 	}
+	header nav li.current-menu-item {
+		border-top: .5vmax solid #3485b4;
+	}
 	#primarySidebar {
 		width: 15%;
+	}
+	#myName {
+		font-size: 2vmax;
 	}
 	#allPosts {
 		width: 81%;
 	}
+	.post-title {
+		font-size: 2.5vmax;
+		line-height: 4vmax;
+	}
 	#sidebarList li img {
-		height: 135px;
+		height: 12vmax;
+	}
+	#links a {
+		font-size: 2vmax;
+	}
+	.post-meta {
+		margin-top: -2vmax;
+		border-left: .25vmax solid #3485b4;
+		font-size: 1.5vmax;
 	}
 }
-/* Portrait tablet to landscape and desktop */
 
-@media (min-width: 768px) and (max-width: 1099px) {
+/* Smartphones */
+@media (min-width: 0px) and (max-width: 1099px) {
 	#baseContainer {
 		max-width: 100%;
 		min-width: auto;
+		font-size: 3vmax;
 	}
 	#contentContainer {
 		padding-right: 10px;
 		padding-left: 10px;
+	}
+	header nav li.current-menu-item {
+		border-top: 1vmax solid #3485b4;
 	}
 	#primarySidebar {
 		float: none;
@@ -54,6 +57,17 @@
 		width: 100%;
 		margin-bottom: 40px;
 		padding: 0;
+	}
+	#myName {
+		font-size: 4.5vmax;
+	}
+	#sidebarList li img {
+		margin-top: 1em;
+		height: 30vmax;
+	}
+	.post-title {
+		font-size: 5vmax;
+		line-height: 6vmax;
 	}
 	#allPosts {
 		width: 100%;
@@ -62,77 +76,16 @@
 		padding-top: 0px;
 	}
 	header nav li a {
-		padding: 12px 25px 18px 25px;
-		font-size: 15px;
+		padding: 12px 25px 25px 25px;
 	}
 	article {
 		padding: 0;
 	}
 	#links a {
-		margin: auto;
+		font-size: 3vmax;
 	}
-}
-/* Landscape phone to portrait tablet */
-
-@media (min-width: 640px) and (max-width: 767px) {
-	#baseContainer {
-		max-width: 100%;
-		min-width: auto;
-	}
-	#contentContainer {
-		padding-right: 10px;
-		padding-left: 10px;
-	}
-	header {
-		padding-top: 0px;
-	}
-	#primarySidebar {
-		float: none;
-		text-align: center;
-		margin: auto;
-		width: 100%;
-		margin-bottom: 40px;
-		padding: 0;
-	}
-	#allPosts {
-		width: 100%;
-	}
-	article {
-		padding: 0;
-	}
-	#links a {
-		margin: auto;
-	}
-}
-/* Landscape phones and down */
-
-@media (min-width: 320px) and (max-width: 639px) {
-	#baseContainer {
-		max-width: 100%;
-		min-width: auto;
-	}
-	#contentContainer {
-		padding-right: 10px;
-		padding-left: 10px;
-	}
-	header {
-		padding-top: 0px;
-	}
-	#primarySidebar {
-		float: none;
-		text-align: center;
-		margin: auto;
-		width: 100%;
-		margin-bottom: 40px;
-		padding: 0;
-	}
-	#allPosts {
-		width: 100%;
-	}
-	article {
-		padding: 0;
-	}
-	#links a {
-		margin: auto;
+	.post-meta {
+		margin-top: -3vmax;
+		border-left: .5vmax solid #3485b4;
 	}
 }
