--- a/TaraziChrisSite/fortune/templates/fortune/base.css
+++ b/TaraziChrisSite/fortune/templates/fortune/base.css
@@ -6,10 +6,10 @@
 		}
 		#baseContainer {
 			min-width: 728px;
-			max-width: 80%;
+			max-width: 65%;
 			margin-left: auto;
 			margin-right: auto;
-			font-size: 16px;
+			font-size: 1vmax;
 		}
 		#contentContainer {
 			color: #000;
@@ -59,7 +59,7 @@
 			color:#fff;
 		}
 		header nav li.current-menu-item {
-			border-top:4px solid #3485b4;
+			border-top:.3vmax solid #3485b4;
 		}
 		header nav li.current-menu-item a {
 			background-color:#3c464d;
@@ -129,6 +129,22 @@
 			width: 75%;
 			float: left;
 		}
+		#links {
+			display: inline-block;
+		}
+		#links a {
+			position: relative;
+		    padding: .5em 1em .5em 1em;
+		    margin: auto;
+		    float: left;
+		    border-radius: 4px;
+		    font-size: 1.5vmax;
+		    color: white;
+		    text-decoration: none;
+		    background-color: #55acee;
+		    box-shadow: 0px 5px 0px 0px #3C93D5;
+		    margin-bottom: 10px;
+		}
 		#primarySidebar {
 			width: 20%;
 			float: right;
@@ -142,7 +158,7 @@
 			/*opacity: 0;
 			transition: opacity 1s ease-in 1.75s;*/
 			padding-top: 35px;
-			font-size: 26px;
+			font-size: 1.5vmax;
 		}
 		#myTitle {
 			/*opacity: 0;
@@ -184,7 +200,7 @@
 		.social-links, .social-links:link, .social-links:visited,
 		.social-links:hover {
 			text-decoration: none;
-			color: black;
+			color: inherit;
 		}
 		article {
 			line-height: 1.7em;
@@ -202,25 +218,10 @@
 			margin-left: 0;
 			margin-bottom: 16px;
 		}
-		#links {
-			display: inline-block;
-		}
-		#links a {
-			position: relative;
-		    padding: 1em;
-		    margin: auto;
-		    float: left;
-		    border-radius: 4px;
-		    font-size: 1.5em;
-		    color: white;
-		    text-decoration: none;
-		    background-color: #55acee;
-		    box-shadow: 0px 5px 0px 0px #3C93D5;
-		}
 		.post-title {
 			font-weight: bold;
-			font-size: 36px;
-			line-height: 46px;
+			font-size: 2.25vmax;
+			line-height: 2.5vmax;
 			margin-top: 0;
 		}
 		.post-title a {
@@ -234,8 +235,9 @@
 		}
 		.post-meta {
 			color: #aaa;
-			border-left: 3px solid #3485b4;
-			line-height: 1em;
+			border-left: .25vmax solid #3485b4;
+			line-height: 1vmax;
 			font-weight: bold;
 			padding-left: 8px;
+			font-size: 1vmax;
 		}
