--- a/TaraziChrisSite/fortune/templates/fortune/media_queries.css
+++ b/TaraziChrisSite/fortune/templates/fortune/media_queries.css
@@ -2,7 +2,7 @@
 @media (min-width: 1100px) and (max-width: 1699px) {
 	#baseContainer {
 		max-width: 90%;
-		font-size: 1.5vmax;
+		font-size: 2.5vmin;
 	}
 	header {
 		padding-top: 0px;
@@ -11,28 +11,28 @@
 		width: 15%;
 	}
 	#myName {
-		font-size: 2vmax;
+		font-size: 3.5vmin;
 	}
 	#fortune {
 		width: 81%;
 	}
 	article a img {
-		max-width: 90%;
-		min-width: 80%;
-		width: 90%;
+		max-width: 75%;
+		min-width: 25%;
+		max-height: 75%;
 	}
 	#sidebarList li img {
-		height: 12vmax;
+		height: 20vmin;
 	}
 	#links a {
-		font-size: 2vmax;
+		font-size: 3vmin;
 	}
 	.post-title {
-		font-size: 3vmax;
+		font-size: 4vmin;
 	}
 	.post-meta {
-		line-height: 3vmax;
-		font-size: 2vmax;
+		line-height: 4vmin;
+		font-size: 3vmin;
 	}
 }
 
@@ -69,9 +69,9 @@
 		padding: 0;
 	}
 	article a img {
-		max-width: 100%;
-		min-width: 90%;
-		width: 100%;
+		max-width: 50%;
+		min-width: 50%;
+		max-height: 50%;
 	}
 	#links a {
 		font-size: 3vmax;
