--- a/TaraziChrisSite/TaraziChrisSite/templates/about.html
+++ b/TaraziChrisSite/TaraziChrisSite/templates/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<!--<link href='/home/chris/Documents/CS223/Assignment8/Part2/personalsite/TaraziChrisSite/TaraziChrisSite/static/stylesheet.css' rel='stylesheet' type='text/css'> !-->
+		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 		<title>About - Christopher Tarazi</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8; 705" />
 		<style type="text/css">
